# cesium-ion-revit-add-in

./: .editorconfig  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  CesiumIonRevitAddin.sln  HelloRevitCpp.sln  README.md  ThirdParty.json
AddinBundle/: BundleDebug.bat  BundleRelease.bat  CopyBundleToRevit.bat  RemoveBundleFromRevit.bat  bundle.ps1  installer.iss
AddinBundle/CesiumIonRevitAddin.bundle/: PackageContents.xml
AddinBundle/CesiumIonRevitAddin.bundle/Contents/: .gitignore
CesiumIonRevitAddin/: AssemblyInfo.cpp  CMakeLists.txt  CesiumIon.addin  CesiumIonRevit.addin  CesiumIonRevitAddin.cpp  CesiumIonRevitAddin.csproj  CesiumIonRevitAddin.filters  CesiumIonRevitAddin.h  CesiumIonRevitAddin.projitems  CesiumIonRevitAddin.shproj  CesiumIonRevitAddin.vcxproj  Class1.cs  ExternalApplication.cs  IndexedDictionary.cs  Logger.cs  Preferences.cs  packages.config
CesiumIonRevitAddin/CesiumIon/: Connection.cs
CesiumIonRevitAddin/Export/: BinFile.cs  BufferConfig.cs  FileExport.cs  GltfJson.cs  ParameterValue.cs  RevitMaterials.cs
CesiumIonRevitAddin/Forms/: ExportDialog.Designer.cs  ExportDialog.cs  ExportDialog.resx  IonConnectDialog.Designer.cs  IonConnectDialog.cs  IonUploadDialog.Designer.cs  IonUploadDialog.cs  IonUploadDialog.resx
CesiumIonRevitAddin/Images/FontAwesome/: attribution.txt
CesiumIonRevitAddin/Model/: GeometryDataObject.cs  PointIntObject.cs  VertexLookupIntObject.cs
CesiumIonRevitAddin/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin/Transform/: ModelRotation.cs
CesiumIonRevitAddin/Utils/: Collectors.cs  GLTFExportUtils.cs  GeometryUtils.cs  GltfBinaryDataUtils.cs  IonExportUtils.cs  MaterialUtils.cs  TilerExportUtils.cs  Util.cs
CesiumIonRevitAddin/gltf/: ExtStructuralMetadata.cs  FileExport.cs  Gltf.cs  GltfAccessor.cs  GltfAttribute.cs  GltfBinaryData.cs  GltfBuffer.cs  GltfBufferView.cs  GltfExportContext.cs  GltfExtStructuralMetadataExtensionSchema.cs  GltfExtensionSchema.cs  GltfExtensions.cs  GltfExtras.cs  GltfImage.cs  GltfMaterial.cs  GltfMesh.cs  GltfMeshPrimitive.cs  GltfNode.cs  GltfPbr.cs  GltfSampler.cs  GltfScene.cs  GltfTexture.cs  GltfTextureInfo.cs  GltfVersion.cs  KHRTextureTransform.cs
CesiumIonRevitAddin_2020/: CesiumIonRevitAddin_2020.csproj  packages.config
CesiumIonRevitAddin_2020/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2021/: CesiumIonRevitAddin_2021.csproj  packages.config
CesiumIonRevitAddin_2021/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2022/: CesiumIonRevitAddin_2022.csproj  packages.config
CesiumIonRevitAddin_2022/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2023/: CesiumIonRevitAddin_2023.csproj  packages.config
CesiumIonRevitAddin_2023/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2024/: CesiumIonRevitAddin_2024.csproj  packages.config
CesiumIonRevitAddin_2024/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2025/: CesiumIonRevitAddin_2025.csproj  packages.config
CesiumIonRevitAddin_2025/Properties/: AssemblyInfo.cs
CesiumIonRevitAddin_2026/: CesiumIonRevitAddin_2026.csproj
CesiumIonRevitAddin_2026/Properties/: AssemblyInfo.cs
Documentation/DeveloperGuide/: README.md
Documentation/ReleaseGuide/: README.md
GenerateHelp/: Program.cs
HelloRevitCpp/: AssemblyInfo.cpp  CMakeLists.txt  HelloRevitCpp.addin  HelloRevitCpp.cpp  HelloRevitCpp.h  HelloRevitCpp.vcxproj  HelloRevitCpp.vcxproj.filters
